--- a/Love_files/default.css
+++ b/Love_files/default.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	background: #F5E8DC;
+	background: #F5E8DC !important;
 	font-size: 20px;
 	font-family: '微软雅黑', '宋体', sans-serif;
 	color: #5C4033;
